Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39308

The installer calculates the required space wrongly with adding new packages using the package manager

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 RC
    • 5.3.0
    • Packaging & Installer
    • None
    • Ubuntu 13.04

      I have installed Qt 5.3 and after few days it turned out I need 5.1, so I opened the Maintenance Tool and selected the 5.1, then I got, that not enough space, 17Gb required and only 9Gb free and it didn't allow me to install it.

        1. maintanencetool-v.txt
          51 kB
        2. qt-installer-embedded.png
          qt-installer-embedded.png
          201 kB
        3. qt-installer-init.png
          qt-installer-init.png
          45 kB
        4. qt-installer-req.png
          qt-installer-req.png
          28 kB
        5. qt-installer-select.png
          qt-installer-select.png
          45 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes