Fix calculation of required disk space

Do not count in already installed components when calculating the
required disk space.

Task-number: QTBUG-39308
Change-Id: Idff52da33d3e42dd156322115d5c489ba13a0945
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>